添加通过配置文件主动拉流分发的功能

--- a/SipClient/SipClient.vcxproj
+++ b/SipClient/SipClient.vcxproj
@@ -153,6 +153,7 @@
     <ClCompile Include="ConfigManager.cpp" />
     <ClCompile Include="DbManager.cpp" />
     <ClCompile Include="Device.cpp" />
+    <ClCompile Include="DistributeManager.cpp" />
     <ClCompile Include="FileTime.cpp" />
     <ClCompile Include="HttpClient.cpp" />
     <ClCompile Include="HttpServer.cpp" />
@@ -171,6 +172,7 @@
     <ClInclude Include="ConfigManager.h" />
     <ClInclude Include="DbManager.h" />
     <ClInclude Include="Device.h" />
+    <ClInclude Include="DistributeManager.h" />
     <ClInclude Include="FileTime.h" />
     <ClInclude Include="HttpClient.h" />
     <ClInclude Include="HttpServer.h" />
