--- a/SipClient/SipClient.vcxproj.filters
+++ b/SipClient/SipClient.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="Utils.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="DistributeManager.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h">
@@ -81,6 +84,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="Utils.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="DistributeManager.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
