定时去检查拉流分发信息，以免ZLM重启等因素造成的丢失

--- a/SipClient/SipClient.vcxproj
+++ b/SipClient/SipClient.vcxproj
@@ -141,6 +141,7 @@
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
       <LanguageStandard>stdcpp17</LanguageStandard>
       <FavorSizeOrSpeed>Neither</FavorSizeOrSpeed>
+      <Optimization>Disabled</Optimization>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
