--- a/.gitmodules
+++ b/.gitmodules
@@ -1,30 +1,30 @@
 [submodule "submodule/ZLToolKit"]
 	path = submodule/ZLToolKit
-	url = https://gitee.com/xia-chu/ZLToolKit.git
+	url = https://github.com/ZLMediaKit/ZLToolKit.git
 [submodule "submodule/exosip"]
 	path = submodule/exosip
-	url = https://gitee.com/arm-depend/exosip.git
+	url = https://git.savannah.nongnu.org/git/exosip.git
 [submodule "submodule/osip"]
 	path = submodule/osip
-	url = https://gitee.com/arm-depend/osip.git
+	url = https://git.savannah.gnu.org/git/osip.git
 [submodule "submodule/cpr"]
 	path = submodule/cpr
-	url = https://gitee.com/arm-depend/cpr.git
+	url = https://github.com/libcpr/cpr.git
 [submodule "submodule/spdlog"]
 	path = submodule/spdlog
-	url = https://gitee.com/arm-depend/spdlog.git
+	url = https://github.com/gabime/spdlog.git
 [submodule "submodule/json"]
 	path = submodule/json
-	url = https://gitee.com/arm-depend/json.git
+	url = https://github.com/nlohmann/json.git
 [submodule "submodule/pugixml"]
 	path = submodule/pugixml
-	url = https://gitee.com/arm-depend/pugixml.git
+	url = https://github.com/zeux/pugixml.git
 [submodule "submodule/sqlite3pp"]
 	path = submodule/sqlite3pp
-	url = https://gitee.com/arm-depend/sqlite3pp.git
+	url = https://github.com/iwongu/sqlite3pp.git
 [submodule "submodule/curl"]
 	path = submodule/curl
-	url = https://gitee.com/arm-depend/curl.git
+	url = https://github.com/curl/curl.git
 [submodule "submodule/magic_enum"]
 	path = submodule/magic_enum
-	url = https://gitee.com/arm-depend/magic_enum.git
+	url = https://github.com/Neargye/magic_enum.git
