--- a/.github/workflows/cmake-ubuntu.yml
+++ b/.github/workflows/cmake-ubuntu.yml
@@ -26,6 +26,9 @@ jobs:
     - name: 安装开发库
       run: sudo apt-get install -y libssl-dev libcurl4-openssl-dev libc-ares-dev tcl tcl-dev libpugixml-dev sqlite3 libsqlite3-dev libboost-all-dev
 
+    - name: 修改gitmodule
+      run: rm -f .gitmodules && mv .gitmodules-github .gitmodules
+
     - name: 更新submodule
       run: git submodule update --init
 
